--- a/Tool.html
+++ b/Tool.html
@@ -62,14 +62,16 @@
         .add-tool {
             background-color: #28a745;
         }
+        .view-history {
+            background-color: #ff8c00;
+        }
         .assign-tool {
             background-color: #007bff;
         }
-        .add-tool:hover {
-            background-color: #218838;
-        }
+        .add-tool:hover,
+        .view-history:hover,
         .assign-tool:hover {
-            background-color: #0056b3;
+            opacity: 0.8;
         }
         .form-container {
             display: none;
@@ -130,178 +132,41 @@
         .pagination span {
             font-size: 14px;
         }
+        /* Modal styles */
+        .modal {
+            display: none;
+            position: fixed;
+            z-index: 1;
+            left: 0;
+            top: 0;
+            width: 100%;
+            height: 100%;
+            overflow: auto;
+            background-color: rgb(0,0,0);
+            background-color: rgba(0,0,0,0.4);
+            padding-top: 60px;
+        }
+        .modal-content {
+            background-color: #fefefe;
+            margin: 5% auto;
+            padding: 20px;
+            border: 1px solid #888;
+            width: 80%;
+            border-radius: 10px;
+        }
+        .close {
+            color: #aaa;
+            float: right;
+            font-size: 28px;
+            font-weight: bold;
+        }
+        .close:hover,
+        .close:focus {
+            color: black;
+            text-decoration: none;
+            cursor: pointer;
+        }
     </style>
-    <!-- Add Firebase SDK -->
-    <script type="module">
-        import { initializeApp } from "https://www.gstatic.com/firebasejs/9.17.1/firebase-app.js";
-        import { getDatabase, ref, push, set, onValue, update } from "https://www.gstatic.com/firebasejs/9.17.1/firebase-database.js";
-
-        // Firebase configuration
-        const firebaseConfig = {
-            apiKey: "AIzaSyCFGX-J09YjbCe_u58yexo7Eg6VqWwPje0",
-            authDomain: "project-management-a1c5e.firebaseapp.com",
-            databaseURL: "https://project-management-a1c5e-default-rtdb.firebaseio.com/",
-            projectId: "project-management-a1c5e",
-            storageBucket: "project-management-a1c5e.appspot.com",
-            messagingSenderId: "662718236281",
-            appId: "1:662718236281:web:e859b39671aefa67e436a8",
-        };
-
-        // Initialize Firebase
-        const app = initializeApp(firebaseConfig);
-        const db = getDatabase(app);
-
-        // Get DOM elements
-        const toolTable = document.getElementById('toolTable').getElementsByTagName('tbody')[0];
-        const searchInput = document.querySelector('.search-input');
-        const assignForm = document.getElementById('assignForm');
-        const assignToolForm = document.getElementById('assignToolForm');
-        const pagination = document.querySelector('.pagination');
-        const pageInfo = document.getElementById('pageInfo');
-
-        let tools = [];
-        let currentPage = 1;
-        const rowsPerPage = 10;
-
-        // Load tools from Firebase
-        function loadTools() {
-            const toolsRef = ref(db, 'tools/');
-            onValue(toolsRef, (snapshot) => {
-                const data = snapshot.val();
-                tools = data ? Object.values(data) : [];
-                updateTable();
-                updatePagination();
-            });
-        }
-
-        // Save tool assignment to Firebase
-        function saveToolAssignment(tool) {
-            const toolsRef = ref(db, 'tools/');
-            const newToolRef = push(toolsRef);
-            set(newToolRef, tool).then(() => {
-                console.log("Tool assignment saved to Firebase:", tool);
-            }).catch((error) => {
-                console.error("Error saving tool assignment to Firebase:", error);
-            });
-        }
-
-        // Update tool assignment in Firebase
-        function updateToolAssignment(tool, toolKey) {
-            const toolRef = ref(db, `tools/${toolKey}`);
-            update(toolRef, tool).then(() => {
-                console.log("Tool assignment updated in Firebase:", tool);
-            }).catch((error) => {
-                console.error("Error updating tool assignment in Firebase:", error);
-            });
-        }
-
-        // Filter table based on search input
-        function filterTable() {
-            const filter = searchInput.value.toLowerCase();
-            const rows = toolTable.getElementsByTagName('tr');
-
-            for (let i = 1; i < rows.length; i++) {
-                const cells = rows[i].getElementsByTagName('td');
-                let match = false;
-
-                for (let j = 0; j < cells.length; j++) {
-                    if (cells[j].textContent.toLowerCase().includes(filter)) {
-                        match = true;
-                        break;
-                    }
-                }
-
-                rows[i].style.display = match ? '' : 'none';
-            }
-        }
-
-        // Show or hide the assignment form
-        function showForm() {
-            assignForm.style.display = assignForm.style.display === 'block' ? 'none' : 'block';
-        }
-
-        // Handle tool assignment form submission
-        function assignTool(event) {
-            event.preventDefault();
-
-            const employeeName = document.getElementById('employeeName').value;
-            const projectName = document.getElementById('projectName').value;
-            const toolName = document.getElementById('toolName').value;
-            const assignedDate = new Date().toLocaleDateString();
-
-            const tool = {
-                toolName,
-                currentHolder: employeeName,
-                currentLocation: projectName,
-                assignedDate
-            };
-
-            saveToolAssignment(tool);
-            showForm();
-        }
-
-        // Update the tool table
-        function updateTable() {
-            toolTable.innerHTML = ''; // Clear the table
-
-            const start = (currentPage - 1) * rowsPerPage;
-            const end = start + rowsPerPage;
-            const paginatedTools = tools.slice(start, end);
-
-            paginatedTools.forEach((tool, index) => {
-                const row = toolTable.insertRow();
-                row.insertCell(0).innerText = start + index + 1;
-                row.insertCell(1).innerText = tool.toolName;
-                row.insertCell(2).innerText = tool.currentHolder;
-                row.insertCell(3).innerText = tool.currentLocation;
-                row.insertCell(4).innerText = tool.assignedDate;
-            });
-        }
-
-        // Update pagination controls
-        function updatePagination() {
-            const totalPages = Math.ceil(tools.length / rowsPerPage);
-            pageInfo.innerText = `Page ${currentPage} of ${totalPages}`;
-
-            if (currentPage > 1) {
-                pagination.querySelector('button[onclick="previousPage()"]').disabled = false;
-            } else {
-                pagination.querySelector('button[onclick="previousPage()"]').disabled = true;
-            }
-
-            if (currentPage < totalPages) {
-                pagination.querySelector('button[onclick="nextPage()"]').disabled = false;
-            } else {
-                pagination.querySelector('button[onclick="nextPage()"]').disabled = true;
-            }
-        }
-
-        // Go to the previous page
-        function previousPage() {
-            if (currentPage > 1) {
-                currentPage--;
-                updateTable();
-                updatePagination();
-            }
-        }
-
-        // Go to the next page
-        function nextPage() {
-            const totalPages = Math.ceil(tools.length / rowsPerPage);
-            if (currentPage < totalPages) {
-                currentPage++;
-                updateTable();
-                updatePagination();
-            }
-        }
-
-        // Event listeners
-        searchInput.addEventListener('input', filterTable);
-        assignToolForm.addEventListener('submit', assignTool);
-
-        // Initial load of tools from Firebase
-        loadTools();
-    </script>
 </head>
 <body>
 
@@ -309,13 +174,13 @@
 
     <div class="toolbar">
         <input type="text" class="search-input" placeholder="Search tools..." oninput="filterTable()">
-        <button class="add-tool">View history</button>
+      
         <button class="assign-tool" onclick="showForm()">Assign Tool</button>
     </div>
 
     <div class="form-container" id="assignForm">
         <h2>Assign Tool</h2>
-        <form id="assignToolForm">
+        <form id="assignToolForm" onsubmit="assignTool(event)">
             <label for="employeeName">Employee Name:</label>
             <select id="employeeName" name="employeeName" required>
                 <option value="Brighton Matolokosh">Brighton Matolokosh</option>
@@ -330,20 +195,7 @@
 
             <label for="toolName">Tool Name:</label>
             <select id="toolName" name="toolName" required>
-                <option value="GRINDER">GRINDER</option>
-                <option value="WELDING SQUARE">WELDING SQUARE</option>
-                <option value="COMBINATION SQUARE">COMBINATION SQUARE</option>
-                <option value="WELDING SHIELD">WELDING SHIELD</option>
-                <option value="HAND SAW">HAND SAW</option>
-                <option value="SANDING MACHINE">SANDING MACHINE</option>
-                <option value="STAPLE GUN">STAPLE GUN</option>
-                <option value="TENAN SAW">TENAN SAW</option>
-                <option value="CIRCULAR SAW">CIRCULAR SAW</option>
-                <option value="JIK SAW">JIK SAW</option>
-                <option value="MEASURING TAPE">MEASURING TAPE</option>
-                <option value="PLANE">PLANE</option>
-                <option value="CROW BAR">CROW BAR</option>
-                <option value="BABY GRINDER">BABY GRINDER</option>
+                <!-- Tool names will be populated dynamically -->
             </select>
 
             <button type="submit">Submit Assignment</button>
@@ -360,7 +212,7 @@
                 <th>Assigned Date</th>
             </tr>
         </thead>
-        <tbody>
+        <tbody id="toolTableBody">
             <!-- Tool rows will be dynamically added here -->
         </tbody>
     </table>
@@ -370,6 +222,185 @@
         <span id="pageInfo">Page 1 of 1</span>
         <button onclick="nextPage()">Next</button>
     </div>
+
+    <!-- Modal for tool history -->
+    <div id="historyModal" class="modal">
+        <div class="modal-content">
+            <span class="close" onclick="closeModal()">&times;</span>
+            <h2>Tool Transfer History</h2>
+            <table id="historyTable">
+                <thead>
+                    <tr>
+                        <th>Tool Name</th>
+                        <th>Previous Holder</th>
+                        <th>New Holder</th>
+                        <th>Transfer Date</th>
+                    </tr>
+                </thead>
+                <tbody>
+                    <!-- History will be populated here -->
+                </tbody>
+            </table>
+        </div>
+    </div>
+
+    <script>
+        const rowsPerPage = 10;
+        let currentPage = 1;
+
+        // Tool data including duplicates
+        const tools = [
+            "GRINDER", "GRINDER", "WELDING SQUARE", "COMBINATION SQUARE", "WELDING SHIELD", "WELDING SHIELD",
+            "HAND SAW", "HAND SAW", "SANDING MACHINE", "STAPLE GUN", "TENAN SAW", "CIRCULAR SAW", "JIK SAW",
+            "MEASURING TAPE", "MEASURING TAPE", "PLANE", "CROW BAR", "SANDING MACHINE", "BABY GRINDER", "RIVERT GUN",
+            "LONG LADDER", "LONG LADDER", "LONG LADDER", "LONG LADDER", "STEP LADDER", "STEP LADDER", "CHINESSE SCAFFOLD",
+            "SILVER SCAFFOLD /TECHNO", "LIGHT GREY SCAFFOLD", "GREEN SCAFFOLD", "Steel drum / scania", "steel drum",
+            "DRILLING MACHINE", "DRILLING MACHINE", "DRILLING MACHINE", "DRILLING MACHINE", "CONCRETE DRILLING MACHINE",
+            "SPIRIT LEVEL", "SPIRIT LEVEL", "SPIRIT LEVEL", "SPIRIT LEVEL", "SPIRIT LEVEL", "SPIRIT LEVEL", "LONG SPIRIT LEVEL",
+            "ELECTRIC GLOVES", "MULTIMETER", "MULTIMETER", "ARAN KEYS SET", "SOLDERING GUN", "SLIDING KNIFE", "MEASURING TAPE",
+            "SPRING BENDER 20MM", "CRAW HUMMER", "PLIERS", "PLIERS", "HAK SAW", "SCREW D SET", "SCREW D SET", "LONG NOSE PLIER",
+            "CUTTER PLIER", "SPANNER SET", "TESTER", "TESTER", "FISHER TAPE", "SPRING BENDER 25MM", "CHESEL SET", "SYNAPSE",
+            "SYNAPSE", "HAMMER", "HAMMER", "HAMMER", "DUMP LEVEL", "POKER MACHINE", "TILE CUTTER", "TILE CUTTER",
+            "DIAMOND DISC9''", "CROWBAR", "EXTENTION CABLE", "EXTENTION CABLE", "EXTENTION CABLE", "EXTENTION CABLE",
+            "SILICON GUN", "STEEL TAPE 100M", "STEEL LIFTER", "STEEL LIFTER", "METAL BENDING RIM", "PICK", "PICK",
+            "SMALL SHIFTING SPANNER", "JACK HAMMER", "WHEEL BARROW", "WHEEL BARROW", "WHEEL BARROW", "SHOVEL", "SHOVEL",
+            "SHOVEL", "SPADE", "DICING SET", "PIPE RANGE 12''", "PIPE RANGE 12''", "SPANNER SET", "GREY SILVER SCAFFOLD",
+            "MALLET HUMMER", "MALLET HUMMER", "PINCER", "PINCER", "VICE CLIPS", "WOODEN PLONTO", "WOODEN PLONTO",
+            "WOODEN PLONTO", "TROWEL", "TROWEL", "TROWEL", "SHINE", "SHINE", "SHINE"
+        ];
+
+        function generateBinId(index) {
+            return (index + 1).toString().padStart(3, '0');
+        }
+
+        function populateToolTable() {
+            const tableBody = document.getElementById('toolTableBody');
+            tableBody.innerHTML = ''; // Clear existing rows
+
+            tools.forEach((tool, index) => {
+                const row = tableBody.insertRow();
+                row.insertCell(0).innerText = generateBinId(index);
+                row.insertCell(1).innerText = tool;
+                row.insertCell(2).innerText = ''; // Current Holder
+                row.insertCell(3).innerText = ''; // Current Location
+                row.insertCell(4).innerText = ''; // Assigned Date
+            });
+        }
+
+        function filterTable() {
+            const input = document.querySelector('.search-input');
+            const filter = input.value.toLowerCase();
+            const table = document.getElementById('toolTable');
+            const rows = table.getElementsByTagName('tr');
+
+            for (let i = 1; i < rows.length; i++) {
+                const cells = rows[i].getElementsByTagName('td');
+                let match = false;
+
+                for (let j = 0; j < cells.length; j++) {
+                    if (cells[j].textContent.toLowerCase().includes(filter)) {
+                        match = true;
+                        break;
+                    }
+                }
+
+                rows[i].style.display = match ? '' : 'none';
+            }
+        }
+
+        function showForm() {
+            const form = document.getElementById('assignForm');
+            form.style.display = form.style.display === 'block' ? 'none' : 'block';
+            populateToolNameOptions();
+        }
+
+        function populateToolNameOptions() {
+            const toolNameSelect = document.getElementById('toolName');
+            toolNameSelect.innerHTML = ''; // Clear existing options
+
+            tools.forEach(tool => {
+                const option = document.createElement('option');
+                option.value = tool;
+                option.text = tool;
+                toolNameSelect.appendChild(option);
+            });
+        }
+
+        function assignTool(event) {
+            event.preventDefault();
+
+            const employeeName = document.getElementById('employeeName').value;
+            const projectName = document.getElementById('projectName').value;
+            const toolName = document.getElementById('toolName').value;
+            const assignedDate = new Date().toLocaleDateString();
+
+            const table = document.getElementById('toolTable');
+            const rows = table.getElementsByTagName('tr');
+
+            for (let i = 1; i < rows.length; i++) {
+                const cells = rows[i].getElementsByTagName('td');
+                const toolCell = cells[1];
+                const currentHolderCell = cells[2];
+                const currentLocationCell = cells[3];
+                const assignedDateCell = cells[4];
+
+                if (toolCell.textContent === toolName) {
+                    currentHolderCell.textContent = employeeName;
+                    currentLocationCell.textContent = projectName;
+                    assignedDateCell.textContent = assignedDate;
+                    break;
+                }
+            }
+
+            showForm();
+        }
+
+        // Modal functionality
+        function openModal() {
+            const modal = document.getElementById('historyModal');
+            modal.style.display = 'block';
+            populateHistory();
+        }
+
+        function closeModal() {
+            const modal = document.getElementById('historyModal');
+            modal.style.display = 'none';
+        }
+
+        function populateHistory() {
+            const historyTableBody = document.getElementById('historyTable').getElementsByTagName('tbody')[0];
+            historyTableBody.innerHTML = ''; // Clear the table before populating
+
+            // Mock tool history data
+            const toolHistory = [
+                { toolName: 'GRINDER', prevHolder: 'John Doe', newHolder: 'Jane Smith', transferDate: '2024-01-01' },
+                { toolName: 'HAND SAW', prevHolder: 'Jane Smith', newHolder: 'Mike Johnson', transferDate: '2024-01-02' },
+                { toolName: 'WELDING SHIELD', prevHolder: 'Mike Johnson', newHolder: 'Emily Davis', transferDate: '2024-01-03' },
+                // Add more mock data here
+            ];
+
+            toolHistory.forEach(history => {
+                const row = historyTableBody.insertRow();
+                row.insertCell(0).innerText = history.toolName;
+                row.insertCell(1).innerText = history.prevHolder;
+                row.insertCell(2).innerText = history.newHolder;
+                row.insertCell(3).innerText = history.transferDate;
+            });
+        }
+
+        // Close the modal when clicking outside of it
+        window.onclick = function(event) {
+            const modal = document.getElementById('historyModal');
+            if (event.target == modal) {
+                modal.style.display = 'none';
+            }
+        }
+
+        // Initialize the page
+        window.onload = () => {
+            populateToolTable();
+        };
+    </script>
 
 </body>
 </html>
