--- a/dashboard.html
+++ b/dashboard.html
@@ -1,22 +1,23 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Admin Dashboard</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap/5.1.3/css/bootstrap.min.css">
     <style>
         body {
-            font-family: Arial, sans-serif;
+            font-family: 'Arial', sans-serif;
+            background-color: #f8f9fa;
             margin: 0;
-            background-color: #f4f4f4;
+            padding: 0;
         }
 
         .sidebar {
             width: 250px;
-            background-color: #2c3e50;
-            color: white;
+            background-color: #343a40;
+            color: #fff;
             position: fixed;
             height: 100%;
             padding-top: 20px;
@@ -25,6 +26,7 @@
         .sidebar h2 {
             text-align: center;
             margin-bottom: 30px;
+            font-size: 1.5rem;
         }
 
         .sidebar ul {
@@ -35,12 +37,14 @@
         .sidebar ul li {
             padding: 15px;
             text-align: left;
-            border-bottom: 1px solid #34495e;
+            border-bottom: 1px solid #495057;
         }
 
         .sidebar ul li a {
-            color: white;
+            color: #fff;
             text-decoration: none;
+            display: flex;
+            align-items: center;
         }
 
         .sidebar ul li a i {
@@ -48,7 +52,7 @@
         }
 
         .sidebar ul li:hover {
-            background-color: #34495e;
+            background-color: #495057;
         }
 
         .main-content {
@@ -60,25 +64,30 @@
             display: flex;
             justify-content: space-between;
             align-items: center;
-            background-color: #2980b9;
-            color: white;
+            background-color: #343a40;
+            color: #fff;
             padding: 10px 20px;
             position: sticky;
             top: 0;
             z-index: 1000;
         }
 
-        .notification {
+        .header h1 {
+            margin: 0;
+            font-size: 1.5rem;
+        }
+
+        .header .notification {
             position: relative;
             cursor: pointer;
         }
 
-        .notification i {
+        .header .notification i {
             font-size: 24px;
-            color: white;
+            color: #fff;
         }
 
-        .badge {
+        .header .badge {
             position: absolute;
             top: -5px;
             right: -5px;
@@ -90,7 +99,7 @@
             display: none;
         }
 
-        #notificationsContainer {
+        .header #notificationsContainer {
             position: absolute;
             top: 25px;
             right: 0;
@@ -103,13 +112,13 @@
             z-index: 10;
         }
 
-        #notificationsList {
+        .header #notificationsList {
             list-style: none;
             padding: 0;
             margin: 0;
         }
 
-        #notificationsList li {
+        .header #notificationsList li {
             padding: 5px 0;
         }
 
@@ -122,7 +131,7 @@
         .card {
             background: white;
             border-radius: 5px;
-            box-shadow: 0 2px 5px rgba(0, 0, 0, 0.2);
+            box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
             padding: 20px;
             text-align: center;
             width: 30%;
@@ -131,6 +140,7 @@
         .card i {
             font-size: 50px;
             margin-bottom: 10px;
+            color: #17a2b8;
         }
 
         .card h3 {
@@ -139,7 +149,7 @@
 
         .card a {
             text-decoration: none;
-            color: #2980b9;
+            color: #007bff;
         }
 
         .table-section {
@@ -153,18 +163,17 @@
             background: white;
             border-radius: 5px;
             overflow: hidden;
-            box-shadow: 0 2px 5px rgba(0, 0, 0, 0.2);
+            box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
         }
 
-        th,
-        td {
+        th, td {
             text-align: left;
             padding: 15px;
             border-bottom: 1px solid #ddd;
         }
 
         th {
-            background-color: #2980b9;
+            background-color: #343a40;
             color: white;
         }
 
@@ -173,7 +182,6 @@
         }
     </style>
 </head>
-
 <body>
     <div class="sidebar">
         <h2>IMS Portal</h2>
@@ -181,12 +189,12 @@
             <li><a href="#"><i class="fas fa-tachometer-alt"></i> Dashboard</a></li>
             <li><a href="employee_task_manager.html"><i class="fas fa-users"></i> Staff</a></li>
             <li><a href="Resource.html"><i class="fas fa-box"></i> Material</a></li>
-            <li><a href="Tasksheet.html"><i class="fas fa-box"></i> Tasks</a></li>
-            <li><a href="Tool.html"><i class="fas fa-box"></i> Tools</a></li>
-            <li><a href="Chris.html"><i class="fas fa-box"></i> Chris</a></li>
-            <li><a href="purchases.html"><i class="fas fa-sign-out-alt"></i> Purchases</a></li>
-            <li><a href="minutes.html"><i class="fas fa-sign-out-alt"></i> minutes</a></li>
-            <li><a href="Resource.html"><i class="fas fa-sign-out-alt"></i> Resources</a></li>
+            <li><a href="Tasksheet.html"><i class="fas fa-tasks"></i> Tasks</a></li>
+            <li><a href="Tool.html"><i class="fas fa-tools"></i> Tools</a></li>
+            <li><a href="Chris.html"><i class="fas fa-user"></i> Chris</a></li>
+            <li><a href="purchases.html"><i class="fas fa-shopping-cart"></i> Purchases</a></li>
+            <li><a href="minutes.html"><i class="fas fa-clock"></i> Minutes</a></li>
+            <li><a href="Resource.html"><i class="fas fa-cogs"></i> Resources</a></li>
             <li><a href="index.html"><i class="fas fa-sign-out-alt"></i> Logout</a></li>
         </ul>
     </div>
@@ -205,7 +213,7 @@
                     </div>
                 </div>
                 <span style="margin-left: 20px;">Welcome, chishela
-                    <button onclick="window.location.href='login.html';">Logout</button>
+                    <button class="btn btn-outline-light btn-sm" onclick="window.location.href='login.html';">Logout</button>
                 </span>
             </div>
         </div>
@@ -261,32 +269,18 @@
     </div>
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/js/all.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/js/fontawesome.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap/5.1.3/js/bootstrap.bundle.min.js"></script>
     
     <script>
-        // Fetch data from employee.html and populate the tables
-        function fetchEmployeeData() {
-            fetch('employee.html')
-                .then(response => response.text())
-                .then(data => {
-                    const parser = new DOMParser();
-                    const doc = parser.parseFromString(data, 'text/html');
-                    const employees = [...doc.querySelectorAll('table tbody tr')].map(row => {
-                        const cells = row.querySelectorAll('td');
-                        return {
-                            name: cells[0].innerText,
-                            position: cells[1].innerText,
-                            status: cells[2].innerText
-                        };
-                    });
+        // Mock data for testing purposes
+        const mockEmployees = [
+            { staffId: 1, name: 'John', surname: 'Doe', workLocation: 'Office', position: 'Developer', status: 'Unassigned' },
+            { staffId: 2, name: 'Jane', surname: 'Smith', workLocation: 'Remote', position: 'Designer', status: 'Active' },
+            { staffId: 3, name: 'Mike', surname: 'Johnson', workLocation: 'Office', position: 'Manager', status: 'Unassigned' },
+            { staffId: 4, name: 'Emily', surname: 'Davis', workLocation: 'Remote', position: 'Developer', status: 'Active' }
+        ];
 
-                    populateUnassignedStaff(employees);
-                    populateActiveTasks(employees);
-                })
-                .catch(error => console.error('Error fetching employee data:', error));
-        }
-
-        // Populate the Unassigned Staff table
+        // Function to populate the Unassigned Staff table
         function populateUnassignedStaff(employees) {
             const unassignedEmployees = employees.filter(employee => employee.status === 'Unassigned');
             const tableBody = document.getElementById('unassignedStaffTable');
@@ -298,12 +292,12 @@
 
             unassignedEmployees.forEach(employee => {
                 const row = tableBody.insertRow();
-                row.insertCell(0).innerText = employee.name;
+                row.insertCell(0).innerText = `${employee.name} ${employee.surname}`;
                 row.insertCell(1).innerText = employee.position;
             });
         }
 
-        // Populate the Active Tasks table
+        // Function to populate the Active Tasks table
         function populateActiveTasks(employees) {
             const activeTasks = employees.filter(employee => employee.status === 'Active');
             const tableBody = document.getElementById('activeTasksTable');
@@ -315,19 +309,19 @@
 
             activeTasks.forEach(task => {
                 const row = tableBody.insertRow();
-                row.insertCell(0).innerText = task.projectName;
-                row.insertCell(1).innerText = task.taskDescription;
-                row.insertCell(2).innerText = task.assignedTo;
-                row.insertCell(3).innerText = task.startDate;
-                row.insertCell(4).innerText = task.priority;
+                row.insertCell(0).innerText = task.workLocation; // Assuming workLocation as project name
+                row.insertCell(1).innerText = task.position; // Assuming position as task name
+                row.insertCell(2).innerText = `${task.name} ${task.surname}`; // Assigned to
+                row.insertCell(3).innerText = 'N/A'; // Placeholder for start date
+                row.insertCell(4).innerText = 'N/A'; // Placeholder for priority
             });
         }
 
         // Initialize the data when the page loads
         window.onload = () => {
-            fetchEmployeeData();
+            populateUnassignedStaff(mockEmployees);
+            populateActiveTasks(mockEmployees);
         };
     </script>
 </body>
-
 </html>
