--- a/dashboard.html
+++ b/dashboard.html
@@ -7,180 +7,221 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap/5.1.3/css/bootstrap.min.css">
     <style>
-        body {
-            font-family: 'Arial', sans-serif;
-            background-color: #f8f9fa;
-            margin: 0;
-            padding: 0;
-        }
+       body {
+    font-family: 'Arial', sans-serif;
+    background-color: #f8f9fa;
+    margin: 0;
+    padding: 0;
+}
 
-        .sidebar {
-            width: 250px;
-            background-color: #343a40;
-            color: #fff;
-            position: fixed;
-            height: 100%;
-            padding-top: 20px;
-        }
+.sidebar {
+    width: 250px;
+    background-color: #343a40;
+    color: #fff;
+    position: fixed;
+    height: 100%;
+    padding-top: 20px;
+}
 
-        .sidebar h2 {
-            text-align: center;
-            margin-bottom: 30px;
-            font-size: 1.5rem;
-        }
+.sidebar h2 {
+    text-align: center;
+    margin-bottom: 30px;
+    font-size: 1.5rem;
+}
 
-        .sidebar ul {
-            list-style-type: none;
-            padding: 0;
-        }
+.sidebar ul {
+    list-style-type: none;
+    padding: 0;
+}
 
-        .sidebar ul li {
-            padding: 15px;
-            text-align: left;
-            border-bottom: 1px solid #495057;
-        }
+.sidebar ul li {
+    padding: 15px;
+    text-align: left;
+    border-bottom: 1px solid #495057;
+}
 
-        .sidebar ul li a {
-            color: #fff;
-            text-decoration: none;
-            display: flex;
-            align-items: center;
-        }
+.sidebar ul li a {
+    color: #fff;
+    text-decoration: none;
+    display: flex;
+    align-items: center;
+}
 
-        .sidebar ul li a i {
-            margin-right: 10px;
-        }
+.sidebar ul li a i {
+    margin-right: 10px;
+}
 
-        .sidebar ul li:hover {
-            background-color: #495057;
-        }
+.sidebar ul li:hover {
+    background-color: #495057;
+}
 
-        .main-content {
-            margin-left: 250px;
-            padding: 20px;
-        }
+.main-content {
+    margin-left: 250px;
+    padding: 20px;
+}
 
-        .header {
-            display: flex;
-            justify-content: space-between;
-            align-items: center;
-            background-color: #343a40;
-            color: #fff;
-            padding: 10px 20px;
-            position: sticky;
-            top: 0;
-            z-index: 1000;
-        }
+.header {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    background-color: #343a40;
+    color: #fff;
+    padding: 10px 20px;
+    position: sticky;
+    top: 0;
+    z-index: 1000;
+}
 
-        .header h1 {
-            margin: 0;
-            font-size: 1.5rem;
-        }
+.header h1 {
+    margin: 0;
+    font-size: 1.5rem;
+}
 
-        .header .notification {
-            position: relative;
-            cursor: pointer;
-        }
+.header .notification {
+    position: relative;
+    cursor: pointer;
+}
 
-        .header .notification i {
-            font-size: 24px;
-            color: #fff;
-        }
+.header .notification i {
+    font-size: 24px;
+    color: #fff;
+}
 
-        .header .badge {
-            position: absolute;
-            top: -5px;
-            right: -5px;
-            background: red;
-            color: white;
-            font-size: 12px;
-            padding: 2px 6px;
-            border-radius: 50%;
-            display: none;
-        }
+.header .badge {
+    position: absolute;
+    top: -5px;
+    right: -5px;
+    background: red;
+    color: white;
+    font-size: 12px;
+    padding: 2px 6px;
+    border-radius: 50%;
+    display: none;
+}
 
-        .header #notificationsContainer {
-            position: absolute;
-            top: 25px;
-            right: 0;
-            background-color: white;
-            border: 1px solid #ccc;
-            padding: 10px;
-            display: none;
-            width: 200px;
-            box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
-            z-index: 10;
-        }
+.header #notificationsContainer {
+    position: absolute;
+    top: 25px;
+    right: 0;
+    background-color: white;
+    border: 1px solid #ccc;
+    padding: 10px;
+    display: none;
+    width: 200px;
+    box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
+    z-index: 10;
+}
 
-        .header #notificationsList {
-            list-style: none;
-            padding: 0;
-            margin: 0;
-        }
+.header #notificationsList {
+    list-style: none;
+    padding: 0;
+    margin: 0;
+}
 
-        .header #notificationsList li {
-            padding: 5px 0;
-        }
+.header #notificationsList li {
+    padding: 5px 0;
+}
 
-        .cards {
-            display: flex;
-            justify-content: space-between;
-            margin-top: 20px;
-        }
+.cards {
+    display: flex;
+    justify-content: space-between;
+    margin-top: 20px;
+    flex-wrap: wrap;
+}
 
-        .card {
-            background: white;
-            border-radius: 5px;
-            box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
-            padding: 20px;
-            text-align: center;
-            width: 30%;
-        }
+.card {
+    background: white;
+    border-radius: 5px;
+    box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
+    padding: 20px;
+    text-align: center;
+    width: 100%;
+    max-width: 30%;
+    margin-bottom: 20px;
+}
 
-        .card i {
-            font-size: 50px;
-            margin-bottom: 10px;
-            color: #17a2b8;
-        }
+.card i {
+    font-size: 50px;
+    margin-bottom: 10px;
+    color: #17a2b8;
+}
 
-        .card h3 {
-            margin: 10px 0;
-        }
+.card h3 {
+    margin: 10px 0;
+}
 
-        .card a {
-            text-decoration: none;
-            color: #007bff;
-        }
+.card a {
+    text-decoration: none;
+    color: #007bff;
+}
 
-        .table-section {
-            margin-top: 40px;
-        }
+.table-section {
+    margin-top: 40px;
+}
 
-        table {
-            width: 100%;
-            border-collapse: collapse;
-            margin-top: 20px;
-            background: white;
-            border-radius: 5px;
-            overflow: hidden;
-            box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
-        }
+table {
+    width: 100%;
+    border-collapse: collapse;
+    margin-top: 20px;
+    background: white;
+    border-radius: 5px;
+    overflow: hidden;
+    box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
+}
 
-        th, td {
-            text-align: left;
-            padding: 15px;
-            border-bottom: 1px solid #ddd;
-        }
+th, td {
+    text-align: left;
+    padding: 15px;
+    border-bottom: 1px solid #ddd;
+}
 
-        th {
-            background-color: #343a40;
-            color: white;
-        }
+th {
+    background-color: #343a40;
+    color: white;
+}
 
-        tr:hover {
-            background-color: #f1f1f1;
-        }
-    </style>
+tr:hover {
+    background-color: #f1f1f1;
+}
+
+/* Media queries for responsive design */
+@media (max-width: 768px) {
+    .sidebar {
+        width: 100%;
+        height: auto;
+        position: relative;
+    }
+
+    .sidebar h2 {
+        font-size: 1.2rem;
+    }
+
+    .main-content {
+        margin-left: 0;
+    }
+
+    .header {
+        flex-direction: column;
+        align-items: flex-start;
+    }
+
+    .header h1 {
+        font-size: 1.2rem;
+    }
+
+    .header .notification i {
+        font-size: 20px;
+    }
+
+    .cards {
+        flex-direction: column;
+    }
+
+    .card {
+        width: 100%;
+        margin-bottom: 20px;
+    }
+}
 </head>
 <body>
     <div class="sidebar">
